# IrisClientAPI-cpp

./: CMakeLists.txt  LICENSE  README.md
include/iris/: exceptions.hpp  iris_api.hpp  models.hpp
scripts/: install_dependencies.bat  install_dependencies.sh
src/: iris_api.cpp
